--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start": "tsc -w --preserveWatchOutput",
     "start-test": "jest --watch",
     "test": "jest",
-    "update-snapshots": "jest --updateSnapshot"
+    "update-snapshots": "jest --updateSnapshot",
+    "checkchange": "beachball check",
+    "change": "beachball change",
+    "release": "beachball publish"
   },
   "repository": {
     "type": "git",
@@ -23,13 +26,14 @@
   },
   "homepage": "https://github.com/kenotron/codemad#readme",
   "devDependencies": {
-    "@types/jest": "^24.0.10",
-    "@types/glob": "^7.1.1",
-    "@types/mock-fs": "^3.6.30",
-    "typescript": "^3.3.3333",
-    "jest": "^24.3.1",
-    "ts-jest": "^24.0.0",
-    "mock-fs": "^4.8.0"
+    "@types/jest": "^26.0.23",
+    "@types/glob": "^7.1.3",
+    "@types/mock-fs": "^4.13.0",
+    "typescript": "^4.2.4",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.6",
+    "mock-fs": "^4.14.0",
+    "beachball": "^2.4.0"
   },
   "dependencies": {
     "glob": "^7.1.3"
