--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^26.0.23",
     "@types/glob": "^7.1.3",
     "@types/mock-fs": "^4.13.0",
+    "@types/node": "^15.6.0",
     "typescript": "^4.2.4",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
